syntax = "proto2";

message MembershipMetadata {
  optional string name = 1; // Member's real name
  optional string avatar_uri = 2; // Member's avatar image uri
  optional string about = 3; // Member's md-formatted about text
}
